add page conta/login/novoProduto

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <label class="label" for="menu__search"></label>
             <input type="text" id="menu__search" class="menu__search" placeholder="O que deseja encontrar?">
         </div>
-        <a href="#" class="menu__botao">Login</a>
+        <a href="./login.html" class="menu__botao">Login</a>
     </header>
     <section class="promocao">
         <img src="./IMG/BannerPromocao/banner-image.png" class="promocao__banner" alt="">
