--- a/conta.html
+++ b/conta.html
@@ -28,7 +28,7 @@
  
         <div class="produto__container--titulo">
             <h2 class="titulo__produto">Todos os produtos</h2>
-            <a href="./novoProduto.html" class="link__produto">Adicionar produto</a>
+            <a href="./novoProduto.html" class="link__add__produto">Adicionar produto</a>
         </div>
         <section class="produto__item">
             <div class="produto__container--item">
