--- a/novoProduto.html
+++ b/novoProduto.html
@@ -23,13 +23,11 @@
         </div>
     </header>
 
+    <section class="novoProduto">
+        <h2 class="novoProduto__titulo"></h2>
 
+    </section>
 
-
-
-
-
-    
 
     <section class="contato">
         <div class="contato__container">
@@ -45,7 +43,7 @@
                 </div>
             </div>
             <form class="forms" action="">
-                <h3 class="forms__titulo">Fale conosco</h3>
+                <h3 class="forms__titulo">Fale conosco</h3> 
                 <input type="text" id="nome" class="forms__nome" placeholder="Nome">
     
                 <textarea name="msg" class="forms__msg" id="msg" cols="30" rows="5" placeholder="Escreva sua mensagem"></textarea>
